fix: long descriptions overflow

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -202,6 +202,9 @@ body > #root {
 	color: #cccccc;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
 	line-clamp: 3;
 }
 
